style/top.less
@top-height: 15rem;

div#home {
  position: absolute;
  top: 0;
  width: inherit;
  text-align: center;
  padding: 0.5rem;
  line-height: 1rem;
  z-index: 100;

  img {
    height: 100%;
    width: 10rem;
    z-index: 3;
  }
  background-color: rgba(255, 255, 255, 0.5);
}

div#nav {
  top: @top-height - 3rem;

  position: absolute;
  width: inherit;
  text-align: center;
  margin: 0;
  padding: 0;
  background-color: rgba(255, 255, 255, 0.5);
  z-index: 2;

  a {
    display: inline-block;
    padding: 0;
    margin: 0;
    height: 2rem;
    line-height: 2rem;
    padding: 0.5rem 1.5rem;
    margin: 0;

    text-decoration: none;
    color: black;
    font-weight: bold;

    transition: text-shadow 0.5s;

    &:hover {
      text-shadow: 0 0 0.5rem white;
    }
  }
}

div#carousel {
  height: @top-height;
  img { min-height: @top-height; }
}

@media(min-width: 500px) {
  @top-height: 25rem;
  div#home {
    width: auto;
    background-color: transparent;
    padding: 1.5rem;
    img {
      width: 16rem;
    }
  }
  div#nav {
    top: 0;
    text-align: right;
    a {
      padding: 2rem;
    }
  }
  div#carousel {
    height: @top-height;
    img { min-height: @top-height; }
  }
}

@media(min-width: 800px) {
  @top-height: 40rem;
  div#body {
    width: 800px;
  }
  div#carousel {
    height: @top-height;
    img { min-height: @top-height; }
  }
}

div#carousel {
  width: 100%;
  overflow: hidden;
  z-index: 1;
  img {
    width: 100%;
  }
}

